fix: alignment of table with header fixed

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -66,3 +66,17 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.MuiBox-root.css-4n0gwd {
+  justify-content: center;
+  align-items: center;
+  height: 600px;
+}
+
+.MuiBox-root.css-4n0gwd {
+  box-sizing: border-box;
+}
+
+.MuiStack-root.css-yylonx-MuiStack-root {
+  box-sizing: border-box;
+}
